feat: R session has a state (#4062)
* feat: R session task manager added

* feat: R session state and events added

* feat: rock pod R session init moved to RockPodSession

* fix: added logs and check r session is not pending before closing it

* feat: display R session state/status in R admin page

* fix: break loop when thread is interrupted

* fix: break loop when thread is interrupted

* fix: use a custom thread pool for rock pod sessions init

* chore: code cleaning